Fixed send chat button not displaying correctly on saome displays

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -117,7 +117,7 @@
                         <div class="panel-footer">
                             <form class="chat-bar-lobby form-inline">
                                 <input class="lobbyChatInput form-control" type='text' data-bind="value:lobbyChatMessage"></input>
-                                <button type='submit' class="btn btn-primary" data-bind="click: sendlobbyChatMessage">Send</button>
+                                <button type='submit' class="btn btn-primary" data-bind="click: sendlobbyChatMessage" style="min-width: 60px";>Send</button>
                             </form>
                         </div>
                     </div>
