Fixed positioning of user list and leaderboard, removed unnecessary connected message and moved game instructions further down page

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -28,7 +28,7 @@
                    <table class="table table-hover leaderboard">
                         <thead>
                             <tr style="background-color: #F8F1E9">
-                                <th id="leaderboardHeader" colspan="3">Leaderboard</th>
+                                <th class="leaderboard-header" colspan="3">Leaderboard</th>
                             </tr>
                             <tr>
                                 <th>Rank</th><th>User</th><th>Wins</th>
@@ -86,7 +86,7 @@
                 <div class="col-md-3 col-lg-2">
                     <div class="user-info-container">
                             <div style='background-color: #F8F1E9';>
-                                <div class="username-display">Connected as <span data-bind="text: userName"></span></div>
+                                <!--<div class="username-display">Connected as <span data-bind="text: userName"></span></div>-->
                                 <div class="user-list-header">Users Currently Online</div>
                              </div>
                         <div class="user-info">     
