--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Graduate Project 2014</title>
+        <title>Tiler</title>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/index.css"></link>
