--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="navbar-fixed-bottom footer">
             <div class="container">
-               <p><a href="https://github.com/stevenhillcox/Grad-Project-2014">GitHub</a> - <a href="https://travis-ci.org/stevenhillcox/Grad-Project-2014">Travis</a> - <a href="http://www.scottlogic.co.uk">ScottLogic</a> - <a href='#' data-placement="top" data-toggle="popover" data-container="body" data-trigger="hover" id="serverHealthLink">Server Health</a> </p>
+               <p><a href="https://c9.io/">Cloud9</a> - <a href="https://github.com/stevenhillcox/Grad-Project-2014">GitHub</a> - <a href="https://travis-ci.org/stevenhillcox/Grad-Project-2014">Travis</a> - <a href="http://www.scottlogic.co.uk">ScottLogic</a> - <a href='#' data-placement="top" data-toggle="popover" data-container="body" data-trigger="hover" id="serverHealthLink">Server Health</a> </p>
             </div>
         </div>
         <script data-main="js/index.js" src="js/require.js"></script>
